Fix for layout issues

--- a/css/imports/_layout.scss
+++ b/css/imports/_layout.scss
@@ -1,6 +1,5 @@
 body {
-  display: flex;
-
+  // display: flex;
 }
 
 #container {
